--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,138 @@
-.main {
+.header {
+	width: 100%;
+	height: 5rem;
+	padding: 1rem;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 1px solid gray;
+
+	h1 {
+		transition: all 150ms linear;
+		border: 1px solid transparent;
+		border-radius: 5px;
+		padding: 2px;
+		outline: none;
+
+		&:focus {
+			border-color: dodgerblue;
+		}
+	}
+	
+	.unamed {
+		color: gray;
+		font-size: 1.5rem;
+		text-decoration: line-through;
+	}
+
+	.user {
+		color: #424455;
+	}
+}
+
+.modal {
 	width: 100vw;
 	height: 100vh;
+	
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2000;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	background: rgba(0,0,0,.2);
+
+	&.close {
+		display: none;
+	}
+
+	&.open {
+		display: flex;
+	}
+
+	.center {
+		width: min(400px, 90vw);
+
+		padding: 1rem 0.5rem;
+
+		border-radius: 10px;
+
+		background: white;
+
+		.content {
+			width: 100%;
+			padding: 0 0.5rem;
+
+			text-align: center;
+
+			h1 {
+				color: #424455;
+				margin-bottom: 1rem;
+			}
+
+			ul {
+				list-style: none;
+				width: 100%;
+				padding: 0 1rem;
+				margin-bottom: 1rem;
+
+				li {
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+					background: #f2f3f4;
+					margin-bottom: 8px;
+					border-radius: 3px;
+					padding: 3px 5px;
+				}
+			}
+		}
+
+		.buttons {
+			margin-top: 1rem;
+
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+
+			button {
+				cursor: pointer;
+				color: white;
+				border: none;
+				border-radius: 3px;
+				padding: 5px 8px;
+				transition: all 150ms linear;
+			}
+
+			.cancel {
+				background: #ff5544;
+
+				&:hover {
+					background: #ff3344;
+				}
+			}
+
+			.confirm {
+				background: #23f032;
+
+				&:hover {
+					background: #55ff44;
+				}
+			}
+		}
+	}
+}
+
+.main {
+	width: 100vw;
+	height: calc(100vh - 5rem);
 	display: flex;
 	justify-content: space-between;
+	padding-top: 1rem;
 }
 
 aside {
@@ -61,6 +191,9 @@ aside {
 
 .right {
 	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 
 	.title {
 		width: 100%;
@@ -96,6 +229,32 @@ aside {
 				&:hover {
 					background: #55ff44;
 				}
+			}
+		}
+	}
+
+	#buttons {
+		width: 100%;
+		
+		button {
+			display: block;
+			margin-left: auto;
+			font-size: 1.2rem;
+			padding: 5px 8px;
+			border: 0;
+			border-radius: 5px;
+			cursor: pointer;
+			transition: all 100ms linear;
+
+			&.green {
+				background: #44ff88;
+				color: white;
+			}
+
+			&.gray {
+				color: lightgray;
+				background: gray;
+				cursor: not-allowed;
 			}
 		}
 	}
